@@ -4,3 +4,4 @@ thecl: Double quotes in ECL files are now escaped.
 thdat: Support for TH75 has been removed.
 thanm: Files will compress faster, but use less efficient compression.
 thmsg: A new program for extracting and recreating message files.
+thtk: Text strings are no longer converted from their original character set.
